# django-project

./: Dockerfile  Makefile  README  README.md  docker-compose.ci.yml  docker-compose.yml  pyproject.toml
.github/workflows/: main.yml
main/: admin.py  permissions.py  serializers.py  views.py
main/migrations/: 0001_initial.py  0002_tag_user_role_task.py  0003_alter_task_deadline.py  0004_user_date_of_birth_user_phone.py  0005_alter_task_description.py  0005_user_avatar_picture.py  0006_alter_task_header.py  0007_user_avatar_picture.py
main/models/: __init__.py  tag.py  task.py  user.py
main/services/: async_celery.py  single_resource.py  storage_backends.py
task_manager/: celery.py  log_utils.py  settings.py  tasks.py  urls.py
task_manager/services/: mail.py
templates/emails/: notification.html
tests/: action_client.py  base.py  conftest.py  test_admin.py  test_countdown.py  test_current_user.py  test_delete_task.py  test_email.py  test_jwt.py  test_tag.py  test_task.py  test_user.py  test_user_tasks.py
tests/factories/: base.py  tag_factory.py  task_factory.py  user_factory.py
